@@ -1,6 +1,6 @@
 use strict;
 use warnings;
-use Test::More tests => 22;
+use Test::More tests => 18;
 use Test::Exception;
 use t::util;
 
@@ -8,10 +8,7 @@ use_ok('npg_pipeline::function::illumina_qc_archiver');
 
 my $util = t::util->new();
 my $tmp_dir = $util->temp_directory();
-
 my $analysis_runfolder_path = $util->analysis_runfolder_path();
-my $pbcal = q{Data/Intensities/Bustard1.3.4_09-07-2009_auto/PB_cal};
-my $pbcal_path = $tmp_dir . q{/nfs/sf45/IL2/analysis/123456_IL2_1234/} . $pbcal;
 
 {
   $util->create_analysis();
@@ -20,7 +17,6 @@ my $pbcal_path = $tmp_dir . q{/nfs/sf45/IL2/analysis/123456_IL2_1234/} . $pbcal;
   lives_ok { $ia_loader = npg_pipeline::function::illumina_qc_archiver->new(
     run_folder => q{123456_IL2_1234},
     runfolder_path => $analysis_runfolder_path,
-    recalibrated_path => "$analysis_runfolder_path/$pbcal",
     timestamp => q{20090709-123456}
   ) } q{created with run_folder ok};
   isa_ok($ia_loader, q{npg_pipeline::function::illumina_qc_archiver});
@@ -36,7 +32,7 @@ my $pbcal_path = $tmp_dir . q{/nfs/sf45/IL2/analysis/123456_IL2_1234/} . $pbcal;
   is ($d->identifier, 1234, 'identifier is set correctly');
   is ($d->job_name, q{illumina_analysis_loader_1234_20090709-123456},
     'job_name is correct');
-  my $command = qq{npg_qc_illumina_analysis_loader --id_run 1234 --run_folder 123456_IL2_1234 --runfolder_path $tmp_dir/nfs/sf45/IL2/analysis/123456_IL2_1234 --basecall_path $tmp_dir/nfs/sf45/IL2/analysis/123456_IL2_1234/Data/Intensities/BaseCalls};
+  my $command = qq{npg_qc_illumina_analysis_loader --id_run 1234 --run_folder 123456_IL2_1234 --runfolder_path $tmp_dir/nfs/sf45/IL2/analysis/123456_IL2_1234};
   is ($d->command, $command, 'command is correct');
   is ($d->command_preexec,
     q{npg_pipeline_script_must_be_unique_runner -job_name="illumina_analysis_loader" -own_job_name="illumina_analysis_loader_1234_20090709-123456"},
@@ -50,24 +46,4 @@ my $pbcal_path = $tmp_dir . q{/nfs/sf45/IL2/analysis/123456_IL2_1234/} . $pbcal;
   lives_ok {$d->freeze()} 'definition can be serialized to JSON';
 }
 
-{
-  $util->create_analysis();
-  my $ia_loader = npg_pipeline::function::illumina_qc_archiver->new(
-    run_folder => q{123456_IL2_1234},
-    runfolder_path => $analysis_runfolder_path,
-    recalibrated_path => "$analysis_runfolder_path/$pbcal",
-    timestamp => q{20090709-123456},
-    bam_basecall_path => $analysis_runfolder_path,
-  );
-
-  my $da = $ia_loader->create();
-  ok ($da && @{$da} == 1, 'an array with one definition is returned');
-  my $d = $da->[0];
-  isa_ok($d, q{npg_pipeline::function::definition});
-  my $command = qq{npg_qc_illumina_analysis_loader --id_run 1234 --run_folder 123456_IL2_1234 --runfolder_path $tmp_dir/nfs/sf45/IL2/analysis/123456_IL2_1234 --bam_basecall_path $tmp_dir/nfs/sf45/IL2/analysis/123456_IL2_1234 --basecall_path $tmp_dir/nfs/sf45/IL2/analysis/123456_IL2_1234/Data/Intensities/BaseCalls};
-  is ($d->command, $command, 'command is correct');
-  is ($d->command_preexec,
-    q{npg_pipeline_script_must_be_unique_runner -job_name="illumina_analysis_loader" -own_job_name="illumina_analysis_loader_1234_20090709-123456"},
-    'preexec command is correct');
-}
 1;
